platform/components/ingress/keys.yaml
apiVersion: v1
kind: Service
metadata:
  name: keys
  namespace: ingress-system
spec:
  selector:
    app: keys
  ports:
  - name: http
    port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keys
  namespace: ingress-system
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: keys
  template:
    metadata:
      labels:
        app: keys
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: caddy
        image: ghcr.io/fredrir/platform-caddy@sha256:b03ceb80193dea33aa4812a190a08465dbe56f6a6aec364a47c15df1f56c8106
        command: [caddy]
        args: [run, --config, /etc/caddy/Caddyfile, --adapter, caddyfile]
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: configuration
          mountPath: /etc/caddy
          readOnly: true
        - name: keys
          mountPath: /data/keys
          readOnly: true
        - name: data
          mountPath: /data/caddy
        - name: config
          mountPath: /config
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
      volumes:
      - name: configuration
        configMap:
          name: keys-caddy
      - name: keys
        configMap:
          name: keys
      - name: data
        emptyDir:
          sizeLimit: 16Mi
      - name: config
        emptyDir:
          sizeLimit: 16Mi
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keys
  namespace: ingress-system
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`keys.fredrir.com`)
    services:
    - name: keys
      port: 8080
